<resources>
    <string name="app_name">57357</string>
    <string name="Enteremail">Enter Your Email</string>
    <string name="yourpasswor">Enter Your Password</string>
    <string name="Fpass">Forget Password?</string>
    <string name="your_name">Enter Your Name</string>
    <string name="newpationt">عدد المرضى الجدد</string>
    <string name="zakah_elmal">۞ خُذْ مِنْ أَمْوَالِهِمْ صَدَقَةً تُطَهِّرُهُمْ وَتُزَكِّيهِم بِهَا وَصَلِّ
 عَلَيْهِمْ ِۖآنَّ صَلَاتَكَ سَكَنٌ لَّهُمْ ۗ وَاللَّهُ سَمِيعٌ عَلِيمٌ۞
 سور التوبة (103)
        \n\nويجوز للجمعيات الخيرية التى تقوم بجمع الزكاة وانفاقها فى مصارفها الشرعية باستخدام جزء من الحصيلة فى المصروفات الإدارية
        بشرط عدم الاسراف والتبذير وأن تكون هذه المصروفات ذات علاقة بالزكاة .
وتعود الزكاة على المجتمع بانتشار التكافل والتعاون والتكامل والتضامن بين أفراد المجتمع، بإنشاء المشاريع الخيرية. وتسهيلا على فاعلى الخير فإن المستشفى خصص حساباً
        بنكيك يُمكن كل القادرين إخراج زكاتهم به لصالح مستشفى سرطان الأطفال 57357 حتى يتمكن من علاج حالات أكثر من الأطفال المرضى بالسرطان مجانا.

    </string>
    <string name="zakatElmalHeader">برنامج ذكاة المال </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elsadka_elgarya">برنامج الصدقة الجاريه </string>
    <string name="elsadka_elgarya_dis">الصدقة الجارية: هو ما يتصدق به الناس من أموالهم لصالح المستشفى ويتم تخصيص هذه
        التبرعات للإنفاق على مصروفات تشغيل المستشفى والأجهزة الطبية، ومن المعروف أن ثواب الصدقة الجارية لا ينقطع بموت صاحبها.
قال رسول الله صلى الله عليه وسلم (إذا مات ابن آدم انقطع عمله إلا من ثلاث.. صدقة جارية أو علم ينتفع به أو ولد صالح يدعوا له) صدق رسول الله صلى الله عليه وسلم.
    </string>
    <string name="elsadka_elgarya_elwaaf">الصدقة الجارية /الوقف الخيرى</string>
    <string name="elsadka_elgarya_elwaaf_dis">هو ما يتم وقفه من الأموال الخاصة، ليكون ريعها لصالح عمل خيرى،
        ويعمل المستشفى على استخدام أموال الوقف الخيرى والتبرعات المالية لتنميتها واستثمارها على أسس اقتصادية سليمة
        ، للصرف على علاج المترددين عليه من الأطفال على المدى الطويل، ويمكنكم المساهمة فى الوقف الخيرى بمبالغ ليس لها حد أدنى.
    </string>
    <string name="elsadka_elgarya_eltasmya">الصدقة الجارية/ التسميه</string>
    <string name="elsadka_elgarya_eltasmya_dis">فى 57357 يمكن اختيار الجهاز /المكان/ برنامج التعليم والتدريب، الذى سيتم توجيه التبرع له
        ، وكنوع من الشكر والعرفان لمساهمة المتبرع فى أحد هذه البرامج يتم إطلاق اسم المتبرع أو اسم من يريد من
        أقاربه- أحياءً أو أمواتا- على المكان/ الجهاز/ البرنامج الذى سوف يتبرع بقيمته، ليظل دوماً دليلاً على كرم وعطاء
        المتبرعين، وبعد اختيار سيادتكم للبرنامج المطلوب يتم توقيع عقد قانونى لحفظ حقكم فى هذا ما زال المستشفى قائماً .
    </string>
    <string name="company_program">برنامج تبرع الشركات</string>
    <string name="company_program_dis"><b><i><u>مهمتنا: </u></i></b> دعم المستشفى الدائم عن طريق اشتراك
        الشركات فى برامج التبرع، وذلك عن طريق إشراك قطاعات مختلفة من المجتمع لتوفير الخدمة الطبية للأطفال المرضى بأعلى مستوى من الجودة وبالمجان
        \n\n <u><b><i>الهدف:</i></b></u>
 توفير مصدر ثابت للدخل من قطاعات أخرى من المجتمع للمساهمة فى تكاليف العلاج والرعاية الطبية المقدمة للأطفال مرضى السرطان فى 57357،
        وذلك من خلال اشتراك أكبر عدد من الشركات الوطنية والعالمية، لتكون شريكا دائما للمستشفى فى مشروع الجنيه والبرامج الأخرى، لدعم المستشفى فى تكاليف العلاج.
    </string>
    <string name="eltabra_elshahri">التبرع الشهرى</string>
    <string name="eltabra_elshahri_dis">يمكنك الإنضمام لهذا البرنامج
        واختيار دفع  ( شهرى , ربع سنوى , نصف سنوى , سنوى ) ثابت أو متغير, و يهدف البرنامج الى تأمين مصدر ثابت عن طريق :-
        \n\n1- تغطية تكاليف المنشآت الجديدة و المعدات الطبية  (الصدقة الجارية الشهرية).\n\n
        2- تغطية تكاليف المستلزمات الطبية التى يحتاجها الاطفال المرضى بصفة شهرية .\n\n
        3- تغطية اجراءات مكافحة العدوى بما فى ذلك التطعيمات اللازمة للأطفال.\n\n
        4- تغطية تكاليف البحوث العلمية التي تهدف إلى تحقيق أقصى  تطور فى نتائج المرضى ومستويات العلاج.\n\n
        5- تدريب الطاقم الطبي لضمان أفضل جودة  للرعاية الصحية لأطفالنا .\n\n
    </string>
    <string name="kfala_alag">برنامج كفالة علاج طفل مريض</string>
    <string name="kfala_alag_dis">
        رحلة علاج الطفل المريض بالسرطان، رحلة طويلة، لا تقتصر فقط على العلاج الطبى من أدوية وعمليات، بل هى منظومة متكاملة، تتضمن تغذية علاجية سليمة، وعلاجا نفسيا وتأهيلا لأهل الطفل. البرنامج يهدف إلى توفير متبرعين منتظمين للتكفل بمصاريف علاج الأطفال مرضى السرطان والتحاليل والأشعات والعمليات
        الجراحية والعلاج الكيماوى والإشعاعى وكفالة الأطراف الاصطناعيه، وأيضا للبرنامج دور اجتماعى فى مساعدة أهالى الأطفال المرضى المحتاجين للمساعدة الاجتماعية والنفسية.
    </string>
    <string name="elmotatoain_program">برنامج المتطوعين</string>
    <string name="elmotatoain_program_dis">\n\n<b>المبادئ الرئيسية والقيم الأساسية:</b>
        \n\n1- الإيمان بالله.\n\n
        2-قسم المتطوعين يعتمد على أشخاص متطوعين بوقتهم وقدراتهم اختيارياً ودون مقابل مادى، ومن أجل منفعة المجتمع.\n\n
        3-المتطوعون يدعمون طاقم الخدمات، ولكن لا يحلوا محلهم.\n\n
        4- يمثل المتطوعون المجتمع بشكل عام وتعكس خلفياتهم المختلفة وثقافاتهم التنوع فى المجتمع.\n\n
        5-المتطوعون مسئولون من المستشفى وطاقم العمل الذى يعملون معه.\n\n
        6-يعمل المتطوعون على رفع كفاءة الفريق عن طريق العمل الجماعى مع جميع طاقم الرعاية الطبية فى مستشفى سرطان الأطفال.\n\n
        7-الإيمان بطاقة الخير الموجودة داخل البشر.\n\n
        8-احترام الناس من كافة الأعمار والخلفيات.\n\n
        9-حب الأطفال.\n\n
    </string>
</resources>
