<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.SecondFragment">
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btntbr3"
            android:text="اتبرع عن طري مشاهدة الاعلانات  "
            android:textColor="@color/white"
            android:textSize="30dp"/>
        <View
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:background="#EE8711"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:text="@string/elsadka_elgarya"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textColor="#EE8711"
            android:textSize="33sp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/elsadka_elgarya_dis"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/elsadka_elgarya_elwaaf"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:textSize="24sp"
            android:textColor="#EE8711"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/elsadka_elgarya_elwaaf_dis"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/elsadka_elgarya_eltasmya"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:textSize="24sp"
            android:textColor="#EE8711"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/elsadka_elgarya_eltasmya_dis"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>