<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUp.SignUp">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Sign Up"
        android:textColor="@color/colorPrimary"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />


    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shapeedittext"
        android:hint="@string/your_name"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_signup" />

    <EditText
        android:id="@+id/Email_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shapeedittext"
        android:hint="@string/Enteremail"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name" />
    <EditText
        android:id="@+id/Password_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shapeedittext"
        android:hint="@string/yourpasswor"
        android:paddingLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email_Sign_up"
        android:inputType="numberPassword"
        />



    <Button
        android:id="@+id/Go_Log_in"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shapebtn"
        android:text="Log In"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password_Sign_up" />

    <Button
        android:id="@+id/Go_Home"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/shapebtn"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password_Sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>